# ndvi

./: .gitignore  Dockerfile  Dockerfile_mm  README.md  cli_common.py  clip.cwl  clip_core.py  clip_input.json  ndvi-dataaccess.cwl  ndvi.cwl  ndvi_core.py  ndvi_input.json  ndwi.cwl  ndwi_core.py  publish.json  pyproject.toml  requirements.txt  run.py  run_clip.py  run_ndvi.py  run_ndwi.py  stac.py  stac_io.py  test_ndvi_core_products.py  test_stac_io.py
src/: Dockerfile  ndvi.py  requirements.txt  stac.py
