[project]
name = "ndvi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cwltool>=3.1.20250715140722",
    "numpy>=2.3.2",
    "rasterio>=1.4.3",
    "rio-cogeo>=5.4.2",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.5.1",
]

